// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem should render correctly 1`] = `
<div>
  <li
    class="rmd-list-item rmd-list-item--clickable"
    role="button"
    tabindex="0"
  >
    <span
      class="rmd-list-item__text"
    >
      Content
    </span>
    <span
      class="rmd-ripple-container"
    />
  </li>
</div>
`;

exports[`ListItem should render correctly 2`] = `
<div>
  <li
    class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable"
    role="button"
    tabindex="0"
  >
    <span
      class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
    >
      Left Icon
    </span>
    <span
      class="rmd-list-item__text"
    >
      Content
    </span>
    <span
      class="rmd-ripple-container"
    />
  </li>
</div>
`;
